manifest2/02-deployfront.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: juyun
  name: frontend-port-80
spec:
  revisionHistoryLimit: 5
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend-port-80
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend-port-80
    spec:
      containers:
        - name: frontend-port-80
          image: "252340876984.dkr.ecr.ap-northeast-2.amazonaws.com/cooktailfront:575a0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
