manifest2/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: juyun
  name: juyun
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: juyun-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/subnets: subnet-06e61f4e40cb6f64c, subnet-0f801d5cd56ded4d6  # 퍼블릭 서브넷
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:457017831224:certificate/445450e4-d9ea-47c6-993c-1a12ec5b970b
spec:
  rules:
    - host: api.kyiajm.link
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: backend-port-8080
                port:
                  number: 8080
    - host: www.kyiajm.link
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-port-80
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-port-80
                port:
                  number: 80
  tls:
    - hosts:
        - kyiajm.link
      secretName: tls-secret
